[package]
name = "bloomfx"
version = "0.1.1"
description = "Bloom filter implementation backed by fxhash"
edition = "2021"
repository = "https://github.com/jdockerty/bloomfx"
homepage = "https://github.com/jdockerty/bloomfx"
license-file = "LICENSE"
keywords = ["bloom", "bloomfilter", "fxhash", "bloom-filter"]
categories = ["data-structures", "caching", "algorithms"]
authors = ["Jack Dockerty"]

exclude = [".github/*", "README.md", ".gitignore"]

[lib]
name = "bloomfx"

[dependencies]
bit-vec = "0.8.0"
fxhash = "0.2.1"

[dev-dependencies]
paste = "1.0.15"
rand = "0.8.5"
